[package]
name = "acesort"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
panic = "abort"
lto = "fat"
# codegen-units = 1

[profile.dev]
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
dead_code = "allow"

[lints.clippy]
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
rand = "0.10.0"
